--- a/app/views/mediations/index.html.erb
+++ b/app/views/mediations/index.html.erb
@@ -4,13 +4,13 @@
       <h2 class="display-4"><%= current_user.name %></h2>          
       <hr class="my-4">
     </div>
-    <% @mediations.each do |mediation| %>
+    <% current_user.mediations.each do |mediation| %>
         <div class="card text-center" style="margin-bottom: 10px">
           <div class="card-body">
             <h5 class="card-title"><%=mediation.protocol_number%></h5>
             <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-            <a href="#" class="btn btn-primary">Update</a>
+            <%= link_to 'Update', edit_user_mediation_path(id: mediation.id), class:"btn btn-primary" %>
             <a href="#" class="btn btn-danger">Delete</a>
           </div>
         </div>
